--- a/学习经验.md
+++ b/学习经验.md
@@ -81,3 +81,6 @@ axios.defaults.transformResponse = [
 
 综上，定义JSON转化避免long类型数据溢出，可以实现long类型数据在前端正常显示
 
+# Mac给文件夹赋予管理员权限
+`sudo chown -R gaoyuan ios`
+
