--- a/学习经验.md
+++ b/学习经验.md
@@ -84,3 +84,9 @@ axios.defaults.transformResponse = [
 # Mac给文件夹赋予管理员权限
 `sudo chown -R gaoyuan ios`
 
+```
+
+ if ($request_filename ~* .*index\.html$) {
+      add_header Cache-Control "private, no-store, no-cache, must-revalidate, proxy-revalidate";
+ }
+```
